# subgrid-marching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: main_dual_subgrid.cpp  main_ring_tet.cpp  main_single_tet.cpp  main_subgrid.cpp
cmake/: CPM.cmake  args.cmake  catch2.cmake  fcpw.cmake  geometry-central.cmake  polyscope.cmake
data/npz/: wine_glass_N64_explicit.npz
docs/: combinatorial_merging.md  construction_policy.md  explicit_input_format.md
include/: dual_subgrid_pipeline.h  subgrid_pipeline.h
include/assembly/: dual_mesh_assembly.h  mesh_processing.h
include/common/: file_IO.h  npz_reader.h  triangle_soup.h  utils.h  visual_utils.h
include/grid/: explicit_tet_range.h  grid_iterators.h  mesh_factory.h
include/nc/: NC_solver.h  normalCoord_containers.h
include/query/: fcpw_robust_queries.h  input_query_handler.h  intersection_query.h  mod2_reduction.h  precomputed_query_handler.h  sdf_queries.h
include/subgrid_MT/: boundary_curve.h  cv_interpolation.h  evensum_construction.h  normal_reconstruction.h  primal_reconstruction.h  simplicial_embedding.h
include/subgrid_MT/dual/: dual_construction.h  qef_solver.h
src/: dual_subgrid_pipeline.cpp  subgrid_pipeline.cpp
src/assembly/: dual_mesh_assembly.cpp  mesh_processing.cpp
src/common/: file_IO.cpp  npz_reader.cpp  triangle_soup.cpp  utils.cpp  visual_utils.cpp
src/grid/: mesh_factory.cpp
src/nc/: NC_solver.cpp
src/query/: fcpw_robust_queries.cpp  input_query_handler.cpp  intersection_query.cpp  mod2_reduction.cpp  precomputed_query_handler.cpp  sdf_queries.cpp
src/subgrid_MT/: boundary_curve.cpp  cv_interpolation.cpp  evensum_construction.cpp  normal_reconstruction.cpp  primal_reconstruction.cpp  simplicial_embedding.cpp
src/subgrid_MT/dual/: dual_construction.cpp  qef_solver.cpp
standalone/: CMakeLists.txt  README.md
standalone/cpp/: subgrid_mt.hpp
standalone/examples/: .gitignore  dual_demo.cpp  dual_demo.py  primal_demo.cpp  primal_demo.py
standalone/html/: subgrid-tet-single-tet-ui.html
standalone/python/: subgrid_mt.py
standalone/verify/: .gitignore  verify_dual.cpp  verify_dual.py  verify_primal.cpp  verify_primal.py
tests/: CMakeLists.txt  test_boundary_curves.cpp  test_comb_merge.cpp  test_dual_subgrid_pipeline.cpp  test_nc_solver.cpp  test_self_intersection.cpp  test_subgrid_pipeline.cpp  tet_generators.h
